wwwroot/css/site.css
html, input, textarea, select {
    font-size: 18px;
    font-family: 'Times New Roman'
}

@media (min-width: 768px) {
    html {
        /*Add for mobile*/
    }
}

body {
    margin: 0;
    overflow: hidden;
    background-color: #fffef2;
}



/*--------Navbar--------*/
.navbar {
    overflow: hidden;
    background-color: #39876F;
}

    .navbar a {
        float: left;
        color: #FFFEF2;
        text-align: center;
        padding: 10px 16px;
        text-decoration: none;
        text-shadow: 2px 4px 4px rgb(0 0 0 / 25%);
    }

    .navbar .right {
        float: right !important;
    }

    .navbar a:hover:not(.brand) {
        background-color: #276e59;
    }

    .navbar .brand {
        position: relative;
    }

        .navbar .brand img {
            width: 20px;
            float: left;
            margin: auto;
            position: absolute;
            bottom: 10px;
        }

        .navbar .brand span {
            padding-left: 25px;
        }



/*--------Background--------*/
.background {
    position: absolute;
    width: 100%;
    z-index: -1;
}

    .background.gradient {
        background: linear-gradient(180deg, rgba(255, 254, 242, 0) calc(100vw/16*9/100*60), rgba(255, 254, 242, 1) calc(100vw/16*9/100*80));
        height: 100%
    }

/*--------Content--------*/
.content {
    margin: 0 15%;
    color: #39876F;
    text-shadow: 1px 2px 2px rgb(0 0 0 / 25%);
}

    .content p {
        text-align: justify;
        text-indent: 1em;
        margin: 0.25em;
        font-size: 1.5em;
    }

        .content p.big {
            font-size: 1.5em;
        }

        .content p.medium {
            font-size: 1em;
        }

        .content p.small {
            font-size: 0.5em;
        }

    .content .title {
        font-weight: bold;
        text-shadow: 2px 4px 7px rgb(0 0 0 / 25%);
        text-align: center;
    }

        .content .title.big {
            margin: 1em 0;
            font-size: 3em;
        }

        .content .title.medium {
            margin: 0.5em 0;
            font-size: 2em;
        }

        .content .title.small {
            margin: 0 0;
            font-size: 1.5em;
        }

.dark {
    color: #FFFEF2;
}

.content.centered {
    text-align: center;
}



/*--------Table--------*/
.table {
    border-collapse: collapse;
    width: 100%;
    margin: 0 auto;
    border-radius: 0 0 15px 15px;
    box-shadow: 0 0 0 2px #39876F;
    overflow: hidden;
}

    .table td, .table th {
        padding: 8px 15px;
        max-width: 200px
    }

    .table th {
        background-color: #39876F;
        color: #fffef2;
        text-align: center;
    }

    .table td {
        text-align: left;
        word-wrap: break-word;
    }

        .table td.centered {
            text-align: center;
        }

    .table tr:nth-child(even) {
        background-color: #f2f2f2;
    }

.button {
    background-color: #39876F;
    color: #fffef2;
    padding: 8px 15px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    border: none;
}

    .button:hover {
        background-color: #276e59;
    }

    .button.under-table {
        border-radius: 0 0 15px 15px;
    }

    .button.danger {
        background-color: #ff3838
    }

        .button.danger:hover {
            background-color: #ed3838
        }



/*--------Form--------*/
.model-form input:not(input[type=submit]), .model-form textarea, .model-form select {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 2px solid #39876F;
    color: #39876F;
    border-radius: 4px;
    background-color: white;
}

.model-form textarea {
    height: 300px;
    resize: none;
}

